fix. - remove max-height on testimonial content  - remove overflow-x on body (line 85)

--- a/css/style.scss
+++ b/css/style.scss
@@ -83,7 +83,6 @@ html {
 }
 
 body {
-  overflow-x: hidden;
   background-color: $White;
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -321,7 +320,6 @@ body {
 
   .testimonial__content {
     max-width: 350px;
-    max-height: 234px;
     margin: 4.5rem 0 2rem 10.3125rem;
   }
 
